--- a/Activity_2/src/index.html
+++ b/Activity_2/src/index.html
@@ -17,9 +17,14 @@
     <script type="module" src="js/operators.js"></script>
     <script type="module" src="js/arithmetic.js"></script>
     <script type="module" src="js/assignment.js"></script>
+    
    
 <body>
-    Hello bitch
+
+<p>Rica May Y. Bautista</p>
+
+<h1>JavaScript</h1>
+<h4>Advance Web</h4>
 
 <h3>Output</h3>
 <p id="output"></p>
